# easy-classification

./: .gitignore  README.md  clip.py  data  pyproject.toml  train.py  translate.py
outputs/: class2text.json
src/: backbone_model.py  dataset.py  efficient_net.py
