[tool.poetry]
name = "classifier"
version = "0.1.0"
description = ""
authors = ["Olar Alex <olaralex666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lightning = "^2.1.0"
torch = { version = "2.1.0+cu118", source="torch"}
torchvision = { version = "0.16.0+cu118", source="torch" }
timm = "^0.9.7"
wandb = "^0.15.12"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
open-clip-torch = "^2.22.0"
transformers = "^4.34.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
secondary = true
default = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
